--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@ CaveStory/mute
 CaveStory/Config.dat
 CaveStory/Profile.dat
 CaveStory/window.rect
+CaveStory/mods/mod/mod.dll
+CaveStory/mods/mod/mod.exp
+CaveStory/mods/mod/mod.ilk
+CaveStory/mods/mod/mod.lib
+CaveStory/mods/mod/mod.pdb
