remove debug putmylife

--- a/CaveStory/mods/mod/settings.ini
+++ b/CaveStory/mods/mod/settings.ini
@@ -69,7 +69,7 @@ Physics in Settings.ini = true
 # to play a mod with this enabled.
 
 # Note: Running is disabled while in water.
-Enable Run Button = true
+Enable Run Button = false
 
 # This will only allow the run button to be enabled when a flag is set. Otherwise you will always be able to run.
 Enable Run Button on Flag = false
