--- a/CaveStory/mods/mod/settings.ini
+++ b/CaveStory/mods/mod/settings.ini
@@ -1,5 +1,9 @@
 # ~ Autumn's Various Additions Settings #
 
+###################
+# ~ ASM Patches ~ #
+###################
+
 #######################
 # ~ MyChar Editing  ~ #
 #######################
