--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ CaveStory/mods/mod/mod.exp
 CaveStory/mods/mod/mod.ilk
 CaveStory/mods/mod/mod.lib
 CaveStory/mods/mod/mod.pdb
+CaveStory/mods/mod/settings.ini
