--- a/CaveStory/mods/mod/settings.ini
+++ b/CaveStory/mods/mod/settings.ini
@@ -66,7 +66,7 @@ Double Jump Flag = 6501
 # NOTE ABOUT THESE: NONE OF THESE ARE COMPATIBLE WITH THE <PHY HACK!
 
 # This will make it so the physics for the player are determined from the options set below, instead of the in-game exe.
-Physics in Settings.ini = true
+Physics in Settings.ini = false
 
 # Requires the above setting to be set to true. Adds a run button to the game (The Shift key)
 # Major note which you should include in the readme for your mod: This won't work for controller players! I highly advise using software like Joy2Key if a controller user wishes
