--- a/CaveStory/mods/autumns_various_additions/settings.ini
+++ b/CaveStory/mods/autumns_various_additions/settings.ini
@@ -1,5 +1,26 @@
 # ~ Autumn's Various Additions Settings #
 
+######################
+# ~ Global Toggles ~ #
+######################
+
+# Enables new images in the /data/ folder to be loaded. Required for Custom Entities.
+Enable Custom Surface Code = true
+
+# Enables new custom entities to use for your mods.
+Enable Custom Entity Code = true
+
+# Enables custom movement options for the player. (Required for Custom Entity Code)
+Enable Custom MyChar Code = true
+
+# Enables new tiletypes to be used in-game.
+Enable Custom Tileset Code = true
+
+
+###################
+# ~ ASM Patches ~ #
+###################
+
 #######################
 # ~ MyChar Editing  ~ #
 #######################
@@ -9,7 +30,7 @@
 ###############
 
 # This will enable the walljumping code to be active.
-Walljumps Enabled = false
+Walljumps Enabled = true
 
 # This will only allow walljumping when a flag is set. Otherwise you will always be able to walljump.
 Walljumps Enable on Flag = false
@@ -62,13 +83,13 @@ Double Jump Flag = 6501
 # NOTE ABOUT THESE: NONE OF THESE ARE COMPATIBLE WITH THE <PHY HACK!
 
 # This will make it so the physics for the player are determined from the options set below, instead of the in-game exe.
-Physics in Settings.ini = false
+Physics in Settings.ini = true
 
 # Requires the above setting to be set to true. Adds a run button to the game (The Shift key)
 # Major note which you should include in the readme for your mod: This won't work for controller players! I highly advise using software like Joy2Key if a controller user wishes
 # to play a mod with this enabled.
 # Note: Running is disabled while in water.
-Enable Run Button = false
+Enable Run Button = true
 
 # This will only allow the run button to be enabled when a flag is set. Otherwise you will always be able to run.
 Enable Run Button on Flag = false
@@ -82,7 +103,7 @@ Run Button Flag = 6502
 
 # These are the same as in the vanilla executable. Edit them to your liking if "Physics in Settings.ini" is set to true.
 
-# Physics while outside of water
+# Physics while outside of water.
 Max Walking Speed = 812
 Max Top Movement Speed = 1535
 Gravity = 80
@@ -92,7 +113,7 @@ Walking Acceleration = 85
 Air Control = 32
 Friction = 51
 
-# Physics while submerged in water
+# Physics while submerged in water.
 Underwater Max Walking Speed = 406
 Underwater Max Top Movement Speed = 767
 Underwater Gravity = 40
@@ -104,3 +125,13 @@ Underwater Friction = 25
 
 # If "Enable Run Button" is set to true, this is the players running speed.
 Max Running Speed = 1218;
+
+######################
+# ~ Tile Collision ~ #
+######################
+
+# The height you get from bouncing on a bouncy block.
+Bouncy Block Speed = 1535
+
+# The sound effect that plays when you make contact with a bouncy block.
+Bouncy Block Sound Effect = 25
