--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /Debug
 /Release
 mod.vcxproj.user
+autumns_various_additions.vcxproj.user
 *.exp
 *.lib
 *.pdb
@@ -13,9 +14,9 @@ CaveStory/mute
 CaveStory/Config.dat
 CaveStory/Profile.dat
 CaveStory/window.rect
-CaveStory/mods/mod/mod.dll
-CaveStory/mods/mod/mod.exp
-CaveStory/mods/mod/mod.ilk
-CaveStory/mods/mod/mod.lib
-CaveStory/mods/mod/mod.pdb
-CaveStory/mods/mod/settings.ini
+CaveStory/mods/autumns_various_additions/autumns_various_additions.dll
+CaveStory/mods/autumns_various_additions/autumns_various_additions.exp
+CaveStory/mods/autumns_various_additions/autumns_various_additions.ilk
+CaveStory/mods/autumns_various_additions/autumns_various_additions.lib
+CaveStory/mods/autumns_various_additions/autumns_various_additions.pdb
+CaveStory/mods/autumns_various_additions/settings.ini
