add error.log to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ CaveStory/mute
 CaveStory/Config.dat
 CaveStory/Profile.dat
 CaveStory/window.rect
+CaveStory/error.log
 CaveStory/mods/autumns_various_additions/autumns_various_additions.dll
 CaveStory/mods/autumns_various_additions/autumns_various_additions.exp
 CaveStory/mods/autumns_various_additions/autumns_various_additions.ilk
