sound effect for spring

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ CaveStory/mods/autumns_various_additions/autumns_various_additions.ilk
 CaveStory/mods/autumns_various_additions/autumns_various_additions.lib
 CaveStory/mods/autumns_various_additions/autumns_various_additions.pdb
 CaveStory/mods/autumns_various_additions/settings.ini
+SeaTone/tone.ini
