--- a/mod.vcxproj
+++ b/mod.vcxproj
@@ -93,6 +93,7 @@
     <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\EntityLoad.cpp" />
     <ClCompile Include="src\EntityTable.cpp" />
+    <ClCompile Include="src\LoadPixtone.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\MyChar.cpp" />
     <ClCompile Include="src\PauseScreen.cpp" />
@@ -111,6 +112,7 @@
     <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\EntityLoad.h" />
     <ClInclude Include="src\EntityTable.h" />
+    <ClInclude Include="src\LoadPixtone.h" />
     <ClInclude Include="src\Main.h" />
     <ClInclude Include="src\MyChar.h" />
     <ClInclude Include="src\PauseScreen.h" />
