i've made a ton of changes lol

--- a/mod.vcxproj
+++ b/mod.vcxproj
@@ -93,12 +93,15 @@
     <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\EntityLoad.cpp" />
     <ClCompile Include="src\EntityTable.cpp" />
+    <ClCompile Include="src\ExternalTables.cpp" />
     <ClCompile Include="src\Frame.cpp" />
     <ClCompile Include="src\LoadPixtone.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\ModSettings.cpp" />
     <ClCompile Include="src\MyChar.cpp" />
+    <ClCompile Include="src\MycParam.cpp" />
     <ClCompile Include="src\PauseScreen.cpp" />
+    <ClCompile Include="src\Profile.cpp" />
     <ClCompile Include="src\TextScript.cpp" />
     <ClCompile Include="src\TileCollisionBoss.cpp" />
     <ClCompile Include="src\TileCollisionBullet.cpp" />
@@ -114,12 +117,15 @@
     <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\EntityLoad.h" />
     <ClInclude Include="src\EntityTable.h" />
+    <ClInclude Include="src\ExternalTables.h" />
     <ClInclude Include="src\Frame.h" />
     <ClInclude Include="src\LoadPixtone.h" />
     <ClInclude Include="src\Main.h" />
     <ClInclude Include="src\ModSettings.h" />
     <ClInclude Include="src\MyChar.h" />
+    <ClInclude Include="src\MycParam.h" />
     <ClInclude Include="src\PauseScreen.h" />
+    <ClInclude Include="src\Profile.h" />
     <ClInclude Include="src\TextScript.h" />
     <ClInclude Include="src\TileCollisionBoss.h" />
     <ClInclude Include="src\TileCollisionBullet.h" />
