i may have to revert back to this

--- a/mod.vcxproj
+++ b/mod.vcxproj
@@ -94,6 +94,7 @@
     <ClCompile Include="src\Entity.cpp" />
     <ClCompile Include="src\EntityLoad.cpp" />
     <ClCompile Include="src\EntityTable.cpp" />
+    <ClCompile Include="src\File.cpp" />
     <ClCompile Include="src\Frame.cpp" />
     <ClCompile Include="src\Generic.cpp" />
     <ClCompile Include="src\LoadPixtone.cpp" />
@@ -119,6 +120,7 @@
     <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\EntityLoad.h" />
     <ClInclude Include="src\EntityTable.h" />
+    <ClInclude Include="src\File.h" />
     <ClInclude Include="src\Frame.h" />
     <ClInclude Include="src\Generic.h" />
     <ClInclude Include="src\LoadPixtone.h" />
