--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ CaveStory/mods/autumns_various_additions/autumns_various_additions.lib
 CaveStory/mods/autumns_various_additions/autumns_various_additions.pdb
 CaveStory/mods/autumns_various_additions/settings.ini
 SeaTone/tone.ini
+CaveStory/Profile - Copy.dat
