--- a/mod.vcxproj
+++ b/mod.vcxproj
@@ -89,6 +89,7 @@
   <ItemGroup>
     <ClCompile Include="src\ASMPatches.cpp" />
     <ClCompile Include="src\BKG.cpp" />
+    <ClCompile Include="src\Collectables.cpp" />
     <ClCompile Include="src\Config.cpp" />
     <ClCompile Include="src\Draw.cpp" />
     <ClCompile Include="src\Entity.cpp" />
@@ -114,6 +115,7 @@
     <ClInclude Include="src\ASMPatches.h" />
     <ClInclude Include="src\BKG.h" />
     <ClInclude Include="src\cave_story.h" />
+    <ClInclude Include="src\Collectables.h" />
     <ClInclude Include="src\Config.h" />
     <ClInclude Include="src\Draw.h" />
     <ClInclude Include="src\Entity.h" />
