--- a/mod.vcxproj
+++ b/mod.vcxproj
@@ -105,6 +105,7 @@
     <ClCompile Include="src\PauseScreen.cpp" />
     <ClCompile Include="src\Profile.cpp" />
     <ClCompile Include="src\TextScript.cpp" />
+    <ClCompile Include="src\TextScriptVAR.cpp" />
     <ClCompile Include="src\TileCollisionBoss.cpp" />
     <ClCompile Include="src\TileCollisionBullet.cpp" />
     <ClCompile Include="src\TileCollisionMyChar.cpp" />
@@ -131,6 +132,7 @@
     <ClInclude Include="src\PauseScreen.h" />
     <ClInclude Include="src\Profile.h" />
     <ClInclude Include="src\TextScript.h" />
+    <ClInclude Include="src\TextScriptVAR.h" />
     <ClInclude Include="src\TileCollisionBoss.h" />
     <ClInclude Include="src\TileCollisionBullet.h" />
     <ClInclude Include="src\TileCollisionMyChar.h" />
