--- a/mod.vcxproj
+++ b/mod.vcxproj
@@ -102,6 +102,7 @@
     <ClCompile Include="src\Frame.cpp" />
     <ClCompile Include="src\Game.cpp" />
     <ClCompile Include="src\Generic.cpp" />
+    <ClCompile Include="src\GenericLoad.cpp" />
     <ClCompile Include="src\LoadPixtone.cpp" />
     <ClCompile Include="src\Main.cpp" />
     <ClCompile Include="src\ModSettings.cpp" />
@@ -112,6 +113,7 @@
     <ClCompile Include="src\Profile.cpp" />
     <ClCompile Include="src\Respawn.cpp" />
     <ClCompile Include="src\Stage.cpp" />
+    <ClCompile Include="src\SurfaceDefines.cpp" />
     <ClCompile Include="src\TextScript.cpp" />
     <ClCompile Include="src\TextScriptVAR.cpp" />
     <ClCompile Include="src\TileCollisionBoss.cpp" />
@@ -135,6 +137,7 @@
     <ClInclude Include="src\Frame.h" />
     <ClInclude Include="src\Game.h" />
     <ClInclude Include="src\Generic.h" />
+    <ClInclude Include="src\GenericLoad.h" />
     <ClInclude Include="src\LoadPixtone.h" />
     <ClInclude Include="src\Main.h" />
     <ClInclude Include="src\ModSettings.h" />
@@ -145,6 +148,7 @@
     <ClInclude Include="src\Profile.h" />
     <ClInclude Include="src\Respawn.h" />
     <ClInclude Include="src\Stage.h" />
+    <ClInclude Include="src\SurfaceDefines.h" />
     <ClInclude Include="src\TextScript.h" />
     <ClInclude Include="src\TextScriptVAR.h" />
     <ClInclude Include="src\TileCollisionBoss.h" />
