--- a/mod.vcxproj
+++ b/mod.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="src\ASMLoader.cpp" />
     <ClCompile Include="src\ASMPatches.cpp" />
     <ClCompile Include="src\BKG.cpp" />
+    <ClCompile Include="src\CollabFlag.cpp" />
     <ClCompile Include="src\Collectables.cpp" />
     <ClCompile Include="src\Config.cpp" />
     <ClCompile Include="src\Draw.cpp" />
@@ -128,6 +129,7 @@
     <ClInclude Include="src\ASMPatches.h" />
     <ClInclude Include="src\BKG.h" />
     <ClInclude Include="src\cave_story.h" />
+    <ClInclude Include="src\CollabFlag.h" />
     <ClInclude Include="src\Collectables.h" />
     <ClInclude Include="src\Config.h" />
     <ClInclude Include="src\Draw.h" />
