uhh.. i sure HOPE it does..

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ CaveStory/mods/autumns_various_additions/autumns_various_additions.pdb
 CaveStory/mods/autumns_various_additions/settings.ini
 SeaTone/tone.ini
 CaveStory/Profile - Copy.dat
+CaveStory/Profile.FMOD.dat
