--- a/ZZ-FinalRelease/mods/autumns_various_additions/settings.ini
+++ b/ZZ-FinalRelease/mods/autumns_various_additions/settings.ini
@@ -1,5 +1,86 @@
 # ~ Autumn's Various Additions Settings #
 
+######################
+# ~ Global Toggles ~ #
+######################
+
+# Enables new images in the /data/ folder to be loaded. Required for Custom Entities and Custom TSC Code.
+Enable Custom Surface Code = true
+
+# Enables custom sound effects in the /PixTone/ folder to be loaded. Required for Custom Entities and MyChar code.
+# Name the files based on the sound effect ID you want to implement. If you want to have a custom sound, name it one that isnt used in the basegame.
+# DO NOT GO ABOVE 160, ONLY USE SOUND EFFECT IDS THAT ARENT USED FOR CUSTOM ONES
+# You can also use this to replace sound effects in the game, instead of extracting them from the executable. Adding a "15.pxt" file will replace sound ID 15, for example.
+Enable Custom Sound Effect Code = true
+
+# Enables new custom entities to use for your mods.
+Enable Custom Entity Code = true
+
+# Enables custom movement options for the player. (Required for Custom Entity Code)
+Enable Custom MyChar Code = true
+
+# Enables custom UI to be used for certain elements (Required for Extra Jumps to display the amount above the player)
+# If the money code is enabled from the Custom TSC Code, then the money will display when this is enabled.
+# This is required for the life drain/regen mechanic from the Custom MyChar Code
+Enable Custom UI Code = true
+
+# Enables new tiletypes to be used in-game.
+Enable Custom Tileset Code = true
+
+# Enables new TSC commands for this dll.
+Enable Custom TSC Code = true
+
+# Enables the ability to load custom hex patches from the data/patches folder
+Enable Custom Hex Patch Loader = true
+
+# Enables extra data for the save file. Compatible with previous saves but will break if disabled later with a previously saved file.
+# Required for multiple custom mechanics.
+Enable Custom Save Data Code = true
+
+# Enables a bug fix for the teleporter screen where it drew the screengrab with transparency, when it shouldnt.
+# This is the only bug fix.
+Enable Teleporter Transparency Fix = true
+
+# Disables the "SaveWindowRect" function from ever running.
+# No need to remove window.rect after you literally never moved the window and closed the game!!
+Disable window.rect Saving = true
+
+# Disable error.log from being saved entirely
+Disable error.log Saving = false
+
+# When this is set to true, the default options the game has when loading will be different. (For when there isn't a config file)
+# Controllers will be disabled by default, and the default window size is 640x480 instead of fullscreen.
+Autumn's Default Config Options = true
+
+# Enables a CSE2-enhanced style pause screen.
+Enable Custom Pause Screen = false
+
+#########################
+# ~ Surface Filenames ~ #
+#########################
+
+# All of these image filenames can be customized by default.
+# You can also use <CSF to change a surface midgame, and these surfaces will be saved to the save file.
+Default Title Surface Filename = Title
+Default <IMG Surface Filename = Image\0
+Default Fade Surface Filename = Fade
+Default ItemImage Surface Filename = ItemImage
+Default Arms Surface Filename = Arms
+Default ArmsImage Surface Filename = ArmsImage
+Default StageImage Surface Filename = StageImage
+Default Loading Surface Filename = Loading
+Default MyChar Surface Filename = MyChar
+Default Bullet Surface Filename = Bullet
+Default Caret Surface Filename = Caret
+Default NpcSym Surface Filename = Npc\NpcSym
+Default NpcRegu Surface Filename = Npc\NpcRegu
+Default Autumn UI Surface Filename = AutumnUI
+Default Autumn Objects Surface Filename = Npc\NpcAutumnObj
+Default TextBox Surface Filename = TextBox
+Default Face Surface Filename = Face
+Default Autumn Items Surface Filename = Autumn
+Default Autumn Characters Surface Filename = Npc\NpcAutumnChar
+
 #######################
 # ~ MyChar Editing  ~ #
 #######################
@@ -42,6 +123,17 @@ Extra Jump Momentum = 1280
 # Same as the above, but while submerged in water.
 Underwater Extra Jump Momentum = 640
 
+# UI Offset for the Jump Arrow that appears above the players head.
+Jump Arrow UI X Offset = 4
+Jump Arrow UI Y Offset = 20
+
+# These are negative values by default, and since the settings.ini can't read negative values, these booleans decide if the above values are negative or positive.
+Jump Arrow X Offset is negative = true
+Jump Arrow Y Offset is negative = true
+
+# The Jump Arrow UI won't continue adding new Jump textures after this amount of jumps (And will keep the last sprite for every jump after)
+Jump Arrow UI Limit = 5
+
 ##################
 # Double Jumping #
 ##################
@@ -59,10 +151,11 @@ Double Jump Flag = 6501
 # Physics + Run Button #
 ########################
 
-# NOTE ABOUT THESE: NONE OF THESE ARE COMPATIBLE WITH THE <PHY HACK!
+# Note:<PHY is included with this dll, but only useable when the below option is set to "true"
+# In most cases, you'd want this set to true to take advantage of every feature in this dll.
 
 # This will make it so the physics for the player are determined from the options set below, instead of the in-game exe.
-Physics in Settings.ini = false
+Physics in Settings.ini = true
 
 # Requires the above setting to be set to true. Adds a run button to the game (The Shift key)
 # Major note which you should include in the readme for your mod: This won't work for controller players! I highly advise using software like Joy2Key if a controller user wishes
@@ -81,8 +174,9 @@ Run Button Flag = 6502
 ##################
 
 # These are the same as in the vanilla executable. Edit them to your liking if "Physics in Settings.ini" is set to true.
+# With "Custom TSC Code" enabled, you can edit these values with <PHY!
 
-# Physics while outside of water
+# Physics while outside of water.
 Max Walking Speed = 812
 Max Top Movement Speed = 1535
 Gravity = 80
@@ -92,7 +186,7 @@ Walking Acceleration = 85
 Air Control = 32
 Friction = 51
 
-# Physics while submerged in water
+# Physics while submerged in water.
 Underwater Max Walking Speed = 406
 Underwater Max Top Movement Speed = 767
 Underwater Gravity = 40
@@ -104,3 +198,195 @@ Underwater Friction = 25
 
 # If "Enable Run Button" is set to true, this is the players running speed.
 Max Running Speed = 1218;
+
+# This only gets changed if "Custom TSC Code" + "Custom MyChar Code" are both true, as <BFS lets you change the amount of fuel the player has at anytime.
+# This is the default fuel :3
+Booster 0.8 Fuel = 50
+Booster 2.0 Fuel = 50
+
+# Drain / Regenerate the players life when these are set to true. They require the flags below.
+# Requires "Enable Custom UI Code" to be enabled as well.
+Life Drain when Flag is set = false
+Life Regen when Flag is set = false
+
+# Flags for Life Drain / Regen
+Life Drain Flag = 6504
+Life Regen Flag = 6505
+
+# Wait Time until Life Drain / Regen (in frames)
+Life Drain Wait = 120
+Life Regen Wait = 240
+
+# Amount of Life to Drain / Regen
+Life Drain Amount = 1
+Life Regen Amount = 1
+
+######################
+# ~ Tile Collision ~ #
+######################
+
+# The height you get from bouncing on a bouncy block.
+Bouncy Block Speed = 1535
+
+# The sound effect that plays when you make contact with a bouncy block.
+Bouncy Block Sound Effect = 25
+
+# If this is set to true, then Ice tiles will create particles when walking on them (only when the player is moving)
+Ice Block Particle Effects = true
+
+####################
+# ~ TSC Commands ~ #
+####################
+
+# Enables the <MIM command from this DLL. This requires MyChar code to be enabled.
+# Makes it so using <MIM0001 will give you the mimiga mask sprite for example, <MIM0002 would be the next set of sprites down, etc.
+# Since this is such a widely used asm hack, I figured I'd give it an option to disable it -- If your mod already has <MIM.
+# If your mod doesn't have <MIM yet, you can just use this version anyways
+Enable <MIM Command = true
+
+# This will completely disable TSC encryption, meaning all TSC files will load as just plaintext.
+# This should be obvious.. But Booster's Lab does not *load* unencrypted TSC.
+# This is to emulate something like CS+ switch, where everything is unencrypted.
+# There's almost 0 reason to do this, but it's such an easy feature to implement that I thought I might as well.
+# ONLY TOUCH THIS IF YOU KNOW WHAT YOU'RE DOING
+Disable TSC Encryption = false
+
+# I don't know how well this will work, but incase of any ASM hacks that change the player size, keep the width/height of the sprite in mind
+# The height is the only thing that matters for the most part, but the width might as well be there too.
+# Note: The player automatically moves the sprite down by ("<MIM Player Height" * 2)
+
+# DO NOT TOUCH THIS IF YOU DONT KNOW WHAT YOU'RE DOING
+<MIM Player Width = 16
+<MIM Player Height = 16
+
+# If this flag is set to true, then <IMG images will show ABOVE the textbox instead of behind.
+Show Image Above Textbox Flag = 6503
+
+# Enables money to spawn from entities if they spawn EXP.
+# EXP will still spawn, and the amount of money you get is the npc's EXP divided by 2.
+Enable Money Code = false
+
+# Enemies will not drop money when "Enable Money Code" is set to true
+Disable Money from Entities = false
+
+# Disable EXP spawning when "Enable Money Code" is set to true if you dont want EXP in your mod (This will also make it so money isnt EXP divided by 2)
+Disable EXP with Money = false
+
+# Money HUD position
+Money Hud X = 8
+Money Hud Y = 48
+# How offset the numbers are compared to the money icon (found in AutumnUI)
+Money Hud X Number Offset = 16
+
+# Collectables ( Requires Custom TSC Code + Custom Save Data! ) #
+
+# Originally, I was just going to add 1 collectable type.
+# Instead, I added 5. You can customize which ones display and where they go on screen if you wish.
+# You can use <COE and <COD to enable/disable collectables displaying. Disabling them here is just the default values.
+# Collectable Huds being disabled/enabled is saved to the profile.
+
+# The Number Offsets for the collectables is how offset the numbers are to the right of the collectables icon (found in AutumnUI)
+
+Enable Collectables UI A = false
+Enable Collectables UI B = false
+Enable Collectables UI C = false
+Enable Collectables UI D = false
+Enable Collectables UI E = false
+
+Collectables A (X Position) = 8
+Collectables A (Y Position) = 56
+Collectables A (X Number Offset) = 0
+
+Collectables B (X Position) = 8
+Collectables B (Y Position) = 64
+Collectables B (X Number Offset) = 0
+
+Collectables C (X Position) = 8
+Collectables C (Y Position) = 72
+Collectables C (X Number Offset) = 0
+
+Collectables D (X Position) = 8
+Collectables D (Y Position) = 80
+Collectables D (X Number Offset) = 0
+
+Collectables E (X Position) = 8
+Collectables E (Y Position) = 88
+Collectables E (X Number Offset) = 0
+
+###############################
+# ~ Pause Menu Text Strings ~ #
+###############################
+
+Paused Text = PAUSED
+Resume Text = Resume
+Reset Text = Reset
+Options Text = Options
+Quit Text = Quit
+Restart Required Text = RESTART REQUIRED
+Options Menu Text = OPTIONS
+Resolution Text = Resolution
+Gamepad Text = Gamepad Enabled
+Fullscreen Text = Fullscreen
+Windowed 1 Text = Windowed 320x240
+Windowed 2 Text = Windowed 640x480
+Fullscreen 24bit Text = Fullscreen 24-Bit
+Fullscreen 32bit Text = Fullscreen 32-Bit
+Disabled Text = Disabled
+Enabled Text = Enabled
+Yes Text = Yes
+No Text = No
+Confirm Text = Are you sure?
+Progress Text = Unsaved progress will be lost!
+
+######################
+# ~ Major Settings ~ #
+######################
+
+# Anything in this section can overhaul massive sections of code, or is for very specific cases. More likely useful for Autumn.
+
+# Enables the loading of Stage.tbl files from the data folder, and TSC commands to load other stage tables.
+# [ THIS REPLACES THE TransferStage() FUNCTION
+# Note: This requires Custom TSC Code to be enabled!
+Enable External Stage.tbl Files = false
+
+# The game will attempt to load npc tables changed with the <NPT command when loading a save.
+# This won't have any usecase for a casual user I think, but this is specifically for Autumn.
+Enable Custom NPC Table Loading = false
+
+# Enables the ability to load custom ArmsItem.tsc files using <ASC.
+Enable Custom ArmsItem.tsc Locations = false
+
+# Enables the ability to load custom Head.tsc files using <HSC.
+Enable Custom Head.tsc Locations = false
+
+# Default inventory script to load if "Enable Custom ArmsItem.tsc Locations" is set to true. Does not include the filename as that is automatic.
+Default ArmsItem.tsc name = ArmsItem
+
+# Default header script to load if "Enable Custom Head.tsc Locations" is set to true. Does not include the filename as that is automatic.
+Default Head.tsc name = Head
+
+# For Collab related mods, this will make it so <STT/<NPT and other tsc commands load from data/CollabName/ instead of just gDataPath.
+# Do not touch this unless you know what you're doing. This is planned to be use.
+Collab Mode = false
+
+# The folder inside the /data/ folder that files should enter.
+Collab Name = null
+
+# When <CFE is used, then a separate array of flags will be used instead of the default flags.
+# When <CFD is used, this is disabled.
+# When <ICF is used, they are initialized.
+
+# Basically, these are supposed to reset upon leaving a persons mod in a collab. <FL+/<FL-/<FLJ all effect this other array instead, including normal entities.
+# Because they're "temporary" per mod, we don't have to worry about other people using certain flags!
+
+# Win-win for everyone, really.
+Collab Flags = false
+
+# Reset PixTone folders to default on ModeOpening and ModeTitle.
+Enable PixTone Reloading on Reset = false
+
+# Reset the "stage.tbl" file to the default one in /data/ when returning to ModeOpening. Only functions if Stage.tbl is enabled.
+Enable stage.tbl Reloading on Reset = false
+
+# Reset the "npc.tbl" file to the default one in /data/ when returning to ModeOpening. Only functions if Custom npc.tbl files are enabled.
+Enable npc.tbl Reloading on Reset = false
