--- a/CaveStory/mods/graphics_enhancement/settings.ini
+++ b/CaveStory/mods/graphics_enhancement/settings.ini
@@ -1,6 +1,6 @@
 ; Makes the game run at 60FPS instead of 50, just like the prototype versions
 ; of the game, and Cave Story+.
-60fps = true
+60fps = false
 
 ; This is the horizontal component of the aspect ratio.
 ; In 16:9, this would be 16.
@@ -36,7 +36,7 @@ sprite_resolution = 1
 ; even when playing in fullscreen on a HD monitor.
 ; That doesn't work so well when using higher-resolution sprites, as they'll seem to
 ; just stutter as they move. It also makes camera movements look kind of stiff.
-remove_sprite_alignment = true
+remove_sprite_alignment = false
 
 ; This causes the scrolling-cloud background to repeat in a more simple pattern
 ; in widescreen. This will cause multiple moon/suns to appear in vanilla Cave Story,
