Keep AVA up-to-date

--- a/CaveStory/mods/graphics_enhancement/settings.ini
+++ b/CaveStory/mods/graphics_enhancement/settings.ini
@@ -44,7 +44,7 @@ remove_sprite_alignment = false
 simple_cloud_background = false
 
 ; This replaces the game's normal fullscreen with a borderless-windowed implementation.
-borderless_fullscreen = false
+borderless_fullscreen = true
 
 ; Enables V-Sync, but only in exclusive fullscreen mode (borderless_fullscreen must be off).
 ; Normally, at 60FPS, the game's frame output is pretty unstable, with dropped frames all
