--- a/mod.vcxproj.filters
+++ b/mod.vcxproj.filters
@@ -38,6 +38,8 @@
     <ClCompile Include="src\tinyxml2.cpp" />
     <ClCompile Include="src\XMLLoad.cpp" />
     <ClCompile Include="src\DialogueChoice.cpp" />
+    <ClCompile Include="src\AutPI.cpp" />
+    <ClCompile Include="src\ModInit.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ASMLoader.h" />
@@ -79,5 +81,7 @@
     <ClInclude Include="src\tinyxml2.h" />
     <ClInclude Include="src\XMLLoad.h" />
     <ClInclude Include="src\DialogueChoice.h" />
+    <ClInclude Include="src\AutPI.h" />
+    <ClInclude Include="src\ModInit.h" />
   </ItemGroup>
 </Project>
